--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -3,9 +3,9 @@
 
 name: Python package
 
-on:
-  push:
-    branches: [ "master" ]
+on: [workflow_dispatch]
+  # push:
+  #   branches: [ "master" ]
 
 jobs:
   build:
