--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,7 +6,7 @@ name: Python package
 on:
   push:
     branches: [ "master" ]
-    
+
   workflow_dispatch:
 
 jobs:
@@ -38,3 +38,7 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Build package
+      run: |
+        pip install build
+        python -m build
