add docker file

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -42,3 +42,5 @@ jobs:
       run: |
         pip install build
         python -m build
+    - name: Build the Docker image
+      run: docker build . --file Dockerfile --tag weatherScraper:$(date +%s)
